--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
 				<div class="flower" id="flower1"></div>
 				<div class="flower" id="flower2"></div>
 				<div class="flower" id="flower3"></div>
-				<!-- Add more flowers as needed -->
 			</section>
 		</main>
 
 		<div class="last">
-			<img src="img/IMG-20240619-WA0092.jpg" alt="" />
-			<img src="img/IMG-20240629-WA0079.jpg" alt="" />
-			<img src="img/IMG-20240629-WA0080.jpg" alt="" />
+			<img src="img/lap/IMG-20240619-WA0092.jpg" alt="" />
+			<img src="img/lap/IMG-20240629-WA0079.jpg" alt="" />
+			<img src="img/lap/IMG-20240629-WA0080.jpg" alt="" />
 		</div>
 		<footer>
 			<p>© mama 2024</p>
